- Allow configuration of server keep alives (NOOPs). Default to none

--- a/doc/proxsmtpd.conf
+++ b/doc/proxsmtpd.conf
@@ -28,6 +28,9 @@ OutAddress: 10026
 # Amount of time (in seconds) to wait on network IO
 #TimeOut: 180
 
+# Keep Alives (ie: NOOP's to server)
+#KeepAlives: 0
+
 # Address to listen on (defaults to all local addresses on port 10025)
 #Listen: 0.0.0.0:10025
 
