- Add XCLIENT support - Ignore XCLIENT/XFORWARD commands coming from clients.

--- a/doc/proxsmtpd.conf
+++ b/doc/proxsmtpd.conf
@@ -31,6 +31,9 @@ OutAddress: 10026
 # Keep Alives (ie: NOOP's to server)
 #KeepAlives: 0
 
+# Send XCLIENT commands to receiving server
+#XClient: off
+
 # Address to listen on (defaults to all local addresses on port 10025)
 #Listen: 0.0.0.0:10025
 
