--- a/configure.in
+++ b/configure.in
@@ -36,8 +36,8 @@ dnl  Nate Nielsen <nielsen@memberwebs.com>
 dnl
 
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(proxsmtp, 1.2.1, nielsen@memberwebs.com)
-AM_INIT_AUTOMAKE(proxsmtp, 1.2.1)
+AC_INIT(proxsmtp, 1.2.1.93, nielsen@memberwebs.com)
+AM_INIT_AUTOMAKE(proxsmtp, 1.2.1.93)
 
 LDFLAGS="$LDFLAGS -L/usr/local/lib"
 CFLAGS="$CFLAGS -I/usr/local/include"
@@ -92,6 +92,12 @@ AC_TYPE_SIZE_T
 AC_CHECK_DECL(PTHREAD_MUTEX_ERRORCHECK_NP, [AC_DEFINE(HAVE_ERR_MUTEX, 1, "Error Mutex Type")],
 	[AC_CHECK_DECL(PTHREAD_MUTEX_ERRORCHECK, [AC_DEFINE(HAVE_ERR_MUTEX, 2)], ,
 	[ #include <pthread.h> ])], [ #include <pthread.h> ])
+
+# Required Variables
+AC_CHECK_MEMBER(struct tm.tm_gmtoff,
+    [AC_DEFINE(HAVE_TM_GMTOFF, 1, "Time Zone GMT Offset")],
+    ,[ #include <time.h> ])
+AC_CHECK_GLOBAL(__argv)
 
 # Required Functions
 AC_CHECK_FUNCS([memset strerror malloc realloc getopt strchr tolower getaddrinfo usleep], ,
