--- a/Makefile.am
+++ b/Makefile.am
@@ -3,5 +3,16 @@ EXTRA_DIST = config.sub acsite.m4 config.guess scripts common
 SUBDIRS = src doc
 
 dist-hook:
-	rm -rf `find $(distdir)/ -name CVS`
+	@if test -d "$(srcdir)/.git"; \
+	then \
+		echo Creating ChangeLog && \
+		( cd "$(top_srcdir)" && \
+		  echo '# Generate automatically. Do not edit.'; echo; \
+		  $(top_srcdir)/missing --run git log --stat --date=short ) > ChangeLog.tmp \
+		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
+		|| ( rm -f ChangeLog.tmp ; \
+		     echo Failed to generate ChangeLog >&2 ); \
+	else \
+		echo A git clone is required to generate a ChangeLog >&2; \
+	fi
 
