--- a/configure.in
+++ b/configure.in
@@ -32,8 +32,8 @@ dnl DAMAGE.
 
 
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(proxsmtp, 1.9.90, stef@memberwebs.com)
-AM_INIT_AUTOMAKE(proxsmtp, 1.9.90)
+AC_INIT(proxsmtp, 1.10, stef@thewalter.net)
+AM_INIT_AUTOMAKE(proxsmtp, 1.10)
 
 LDFLAGS="$LDFLAGS -L/usr/local/lib"
 CFLAGS="$CFLAGS -I/usr/local/include"
