--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,8 @@
 
+SIGNER = stef@thewalter.net
+UPLOAD = thewalter.net:/data/www/stef/software/proxsmtp
+FRESHMEAT = freshmeat.rel
+
 EXTRA_DIST = config.sub acsite.m4 config.guess scripts common
 SUBDIRS = src doc
 
@@ -15,4 +19,14 @@ dist-hook:
 	else \
 		echo A git clone is required to generate a ChangeLog >&2; \
 	fi
+	@if test -f $(srcdir)/$(FRESHMEAT); then \
+		grep -qF "$(PACKAGE_VERSION)" $(srcdir)/$(FRESHMEAT) || \
+			( echo "$(FRESHMEAT) release not updated" >&2; exit 1 ); \
+	fi
+
+upload-release: $(DIST_ARCHIVES)
+	gpg --detach-sign --local-user $(SIGNER) $(DIST_ARCHIVES)
+	scp $(DIST_ARCHIVES) $(DIST_ARCHIVES).sig $(FRESHMEAT) NEWS $(UPLOAD)
+	@echo
+	@echo "# Remember to update $(UPLOAD)/index.html"
 
