--- a/configure.in
+++ b/configure.in
@@ -154,6 +154,15 @@ if test "$enable_tproxy" = "yes"; then
 fi
 
 # --------------------------------------------------------------------
+# IPv6 support
+AC_ARG_ENABLE(ipv6,
+	AC_HELP_STRING([--enable-ipv6], [Enable IPv6 support]))
+
+if test "$enable_ipv6" = "yes"; then
+	AC_DEFINE(HAVE_INET6, 1, [IPv6 support])
+fi
+
+# --------------------------------------------------------------------
 # Capabilities support
 
 AC_ARG_ENABLE(capabilities,
