--- a/configure.in
+++ b/configure.in
@@ -234,4 +234,5 @@ True transparent proxy:   $enable_tproxy	--enable-tproxy
 Capabalities:             $enable_capabilities	--enable-capabilities, libcap2
 Debug Mode:               $enable_debug	--enable-debug
 Strict Mode:              $enable_strict	--enable-strict
+IPv6:                     $enable_ipv6	--enable-ipv6
 "
