--- a/configure.in
+++ b/configure.in
@@ -160,6 +160,8 @@ AC_ARG_ENABLE(ipv6,
 
 if test "$enable_ipv6" = "yes"; then
 	AC_DEFINE(HAVE_INET6, 1, [IPv6 support])
+else
+	enable_ipv6="no"
 fi
 
 # --------------------------------------------------------------------
